--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         Por ahora, esta es una imagen de ejemplo.
     </p>
 
-    <img src="https://placehold.co/600x400/eeeeee/333333?text=Mi+Imagen+Aquí" alt="Descripción de mi imagen de ejemplo">
+    <img src="Youtube_logo.png" alt="Mi canal de YouTube">
     <!-- 'src' es la fuente de la imagen (la URL). 'alt' es un texto alternativo que se muestra si la imagen no carga y es vital para la accesibilidad (lectores de pantalla para personas con discapacidad visual). -->
 
 </body>
