--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8"> <!-- Este es un comando mágico que asegura que los acentos (á, é, í) y caracteres como la 'ñ' se vean correctamente. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ¡SÚPER IMPORTANTE! Esto hace que tu sitio se vea bien en teléfonos móviles, adaptando el ancho al de la pantalla del dispositivo. -->
 
-    <title>El Rincón de Lezuba</title> <!-- Este es el texto que aparecerá en la pestaña del navegador. ¡Cámbialo a lo que quieras! -->
+    <title>Lezuba's Home</title> <!-- Este es el texto que aparecerá en la pestaña del navegador. ¡Cámbialo a lo que quieras! -->
 
     <style>
         /* Aquí dentro va la "decoración" (CSS). Es como darle instrucciones de estilo a nuestra estructura HTML. */
