--- a/index.html
+++ b/index.html
@@ -1,83 +1,44 @@
-<!DOCTYPE html> <!-- Esto es como decirle al navegador: "¡Oye! Este documento es una página web moderna (HTML5)". Es la primera línea que siempre debe estar. -->
-
-<html lang="es"> <!-- Aquí empieza la estructura de tu página. 'lang="es"' le dice a los navegadores y a Google que tu sitio está en Español. -->
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <!-- La sección 'head' es como el "cerebro" de tu página. La información aquí no se ve directamente en la página, pero es muy importante. -->
-
-    <meta charset="UTF-8"> <!-- Este es un comando mágico que asegura que los acentos (á, é, í) y caracteres como la 'ñ' se vean correctamente. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ¡SÚPER IMPORTANTE! Esto hace que tu sitio se vea bien en teléfonos móviles, adaptando el ancho al de la pantalla del dispositivo. -->
-
-    <title>Lezuba's Home</title> <!-- Este es el texto que aparecerá en la pestaña del navegador. ¡Cámbialo a lo que quieras! -->
-
-    <style>
-        /* Aquí dentro va la "decoración" (CSS). Es como darle instrucciones de estilo a nuestra estructura HTML. */
-
-        body {
-            /* 'body' es el cuerpo de tu página, todo el contenido visible. */
-            background-color: #ffffff; /* Código para el color blanco. Tu fondo. */
-            color: #000000; /* Código para el color negro. Tu texto. */
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; /* ¡La fuente que querías! Esta es una lista de fuentes. El navegador usará la primera que encuentre en el dispositivo del visitante. Es la fuente estándar en iPhones, Mac, Windows, Android, etc. La más legible y compatible. */
-            line-height: 1.6; /* Esto aumenta un poco el espacio entre líneas de texto, haciéndolo más fácil de leer. */
-            max-width: 800px; /* Fija un ancho máximo para el contenido. Así, en pantallas gigantes, el texto no se estira de lado a lado y sigue siendo legible. */
-            margin: 40px auto; /* Centra el contenido en la página. '40px' es el espacio arriba y abajo, y 'auto' centra los lados. */
-            padding: 20px; /* Añade un poco de espacio interior para que el texto no pegue con los bordes. */
-        }
-
-        h1 {
-            /* Estilo para los títulos principales (<h1>) */
-            color: #333333; /* Un gris oscuro para el título, para que no sea tan fuerte como el negro puro. */
-        }
-
-        a {
-            /* Estilo para los enlaces (<a>) */
-            color: #007BFF; /* Un color azul estándar para los enlaces, para que la gente sepa que se puede hacer clic. */
-            text-decoration: none; /* Le quita el subrayado por defecto. */
-        }
-
-        a:hover {
-            /* Esto se activa cuando pasas el ratón por encima de un enlace. */
-            text-decoration: underline; /* Le pone un subrayado para dar una pista visual. */
-        }
-
-        img {
-            /* Estilo para las imágenes (<img>) */
-            max-width: 100%; /* Asegura que las imágenes nunca sean más anchas que el contenedor. ¡Esencial para que se vean bien en móviles! */
-            height: auto; /* Mantiene la proporción de la imagen al cambiar el tamaño. */
-            border-radius: 8px; /* Añade unas esquinas ligeramente redondeadas a las imágenes. Un toque moderno. */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Mi Sitio Personal</title>
+  <!-- Estilos mínimos -->
+  <style>
+    body {
+      margin: 2rem;
+      background-color: white;    /* Fondo blanco */
+      color: black;               /* Texto negro */
+      font-family: system-ui, sans-serif; /* Fuente predeterminada */
+      line-height: 1.6;
+    }
+    img {
+      max-width: 100%; /* Imágenes fluidas */
+      height: auto;
+    }
+    a {
+      color: blue;      /* Enlaces en azul, típico y legible */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-
 <body>
-    <!-- El 'body' es todo lo que tus visitantes verán: textos, imágenes, enlaces... ¡Aquí es donde pones tu contenido! -->
+  <h1>¡Hola, mundo!</h1>
+  <p>Bienvenido a mi sitio personal. Aquí irán todos mis textos.</p>
 
-    <h1>Bienvenido a mi espacio</h1> <!-- Este es un título principal. Solo debería haber uno por página. -->
+  <!-- Ejemplo de enlace -->
+  <p>Visita <a href="https://example.com" target="_blank">este sitio</a>.</p>
 
-    <p>
-        <!-- La etiqueta <p> es para los párrafos. Aquí es donde pones tus textos. -->
-        Hola, este es mi nuevo sitio web. Es un lugar sencillo para compartir mis pensamientos e ideas.
-        Puedes modificar este texto directamente en el archivo <strong>index.html</strong>. La etiqueta &lt;strong&gt; sirve para poner texto en <strong>negrita</strong>.
-    </p>
+  <!-- Ejemplo de imagen -->
+  <h2>Mi imagen favorita</h2>
+  <img src="ruta/mi-imagen.jpg" alt="Descripción de la imagen">
 
-    <p>
-        Aquí puedes añadir otro párrafo con más información. Por ejemplo, puedes poner un enlace.
-        Para crear un enlace, usas la etiqueta &lt;a&gt;. Por ejemplo, aquí tienes un enlace a
-        <a href="https://github.com" target="_blank">la página de GitHub</a>.
-        El atributo 'target="_blank"' hace que el enlace se abra en una nueva pestaña.
-    </p>
-
-    <h2>Una sección sobre imágenes</h2> <!-- <h2> es un subtítulo. Puedes tener varios. -->
-
-    <p>
-        Poner una imagen también es fácil. Usas la etiqueta &lt;img&gt;. Más abajo te explico cómo subir tus propias imágenes.
-        Por ahora, esta es una imagen de ejemplo.
-    </p>
-
-    <img src="Youtube_logo.png" alt="Mi canal de YouTube">
-    <!-- 'src' es la fuente de la imagen (la URL). 'alt' es un texto alternativo que se muestra si la imagen no carga y es vital para la accesibilidad (lectores de pantalla para personas con discapacidad visual). -->
-
+  <!-- Tu contenido va aquí -->
+  <section>
+    <!-- Pega aquí todo tu texto -->
+  </section>
 </body>
-
 </html>
-
