--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Sitio Personal</title>
+  <title>Lezuba's Home</title>
   <!-- Estilos mínimos -->
   <style>
     body {
