--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>¡Hola, mundo!</h1>
+  <h1>Welcome!</h1>
   <p>Bienvenido a mi sitio personal. Aquí irán todos mis textos.</p>
 
   <!-- Ejemplo de enlace -->
