--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="InShot_20250709_134300931.jpg" type="image/png">
   <title>Lezuba's Home</title>
   <!-- Estilos mínimos -->
   <style>
